# db_lab2

./: CMakeLists.txt  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  database.cpp  database.h  main.cpp
data/: albums.csv  artists.csv  genres.csv  songs.csv
sql/: cleartables.sql  createtables.sql  deletebyindex.sql  deleterow.sql  gettables.sql  indexsearch.sql  indextriggers.sql  inserttables.sql  updaterow.sql
